[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pucca.gd" type="Script" id=1]
[ext_resource path="res://PuccaHitbox.gd" type="Script" id=2]
[ext_resource path="res://puccaseal2.0.png" type="Texture" id=3]
[ext_resource path="res://explosion.png" type="Texture" id=4]
[ext_resource path="res://explosion.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Explode"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -360.0 ]
}

[node name="Pucca" type="Sprite" groups=["pucca"]]
rotation = 6.28319
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Circle" type="Area2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Circle"]
polygon = PoolVector2Array( -80.0016, -364, 19.9984, -352, 103.999, -320, 171.999, -272.001, 227.999, -212.001, 259.999, -156.001, 284, -92.0013, 296, -16.0013, 296, 51.9987, 284, 95.9987, 324, 107.999, 420.001, 183.998, 424.001, 239.998, 416.001, 255.998, 372.001, 263.998, 268.001, 223.999, 220.001, 263.999, 200.001, 247.999, 148.001, 291.999, 92.0015, 328, 24.0016, 352, -39.9984, 364, -127.998, 360.001, -203.999, 336.001, -271.999, 300.001, -327.999, 252.001, -375.999, 188.002, -412, 112.002, -428, 36.0019, -424, -51.9981, -404.001, -135.998, -356.001, -215.998, -296.001, -279.999, -224.001, -327.999, -156.002, -351.999 )
__meta__ = {
"_edit_lock_": true
}

[node name="ExplosionPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ExplosionSheet")
playback_speed = 4.0
anims/Explode = SubResource( 2 )
anims/Hide = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="ExplosionSheet" type="Sprite" parent="."]
visible = false
position = Vector2( -48.5714, -70.1749 )
rotation = -6.28319
scale = Vector2( 4.67143, 4.40125 )
texture = ExtResource( 4 )
hframes = 5
vframes = 4
frame = 16

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Limits" type="Node" parent="."]

[node name="LimitNE" type="Position2D" parent="Limits"]
position = Vector2( 404, 92 )
rotation = -4.46638e-06
__meta__ = {
"_edit_lock_": true
}

[node name="LimitNW" type="Position2D" parent="Limits"]
position = Vector2( 108, 92 )
rotation = -4.46638e-06
__meta__ = {
"_edit_lock_": true
}

[node name="LimitSE" type="Position2D" parent="Limits"]
position = Vector2( 404, 626 )
rotation = -4.46638e-06
__meta__ = {
"_edit_lock_": true
}

[node name="LimitSW" type="Position2D" parent="Limits"]
position = Vector2( 108, 626 )
rotation = -4.46638e-06
__meta__ = {
"_edit_lock_": true
}

[connection signal="clicked" from="Circle" to="." method="_on_Circle_clicked"]
[connection signal="input_event" from="Circle" to="Circle" method="_on_Circle_input_event"]
